@@ -1,0 +1,9 @@
+# $Id: Makefile.am,v 1.1 2001-09-30 14:03:26 thep Exp $
+MAINTAINERCLEANFILES = Makefile.in
+
+INCLUDES = -I. -I$(top_srcdir)/include
+
+noinst_LTLIBRARIES = libthwstr.la
+
+libthwstr_la_SOURCES = thwstr.c
+
