@@ -1,3 +1,8 @@
+2001-09-30 Sunday 18:48  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* ChangeLog (1.52), tests/test_thwchar.c (1.4): Add tests for
+	uni<->win/mac conversion. Use stderr in output messages.
+
 2001-09-25 Tuesday 19:26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* ChangeLog (1.51), Makefile.am (1.4), configure.in (1.17),
@@ -606,13 +611,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.52 2001-09-30 11:48:57 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.53 2001-09-30 14:03:24 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.52 2001-09-30 11:48:57 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.53 2001-09-30 14:03:24 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
